--- a/config.json
+++ b/config.json
@@ -1,10 +1,12 @@
 {
 	"port": 8181,
+	"bind": "127.0.0.1",
 	"xmuxserver":"localhost",
 	"xmuxserver":"frontiermux.com",
-	"muxserver":"btmux.com",
 	"xmuxserver":"sandsofsolaris.com",
         "xmuxport":5555,
+
+	"muxserver":"btmux.com",
         "muxport":3065,
 
         "muxcharset":"utf8"
