--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "WebBTMux",
+  "name": "xpertweb",
+  "version":"0.0.1",
+  "license" : "BSD-3-Clause",
   "description": "BTMux Webfrontend with Node.js",
-  "author": "aki",
+  "author": "ivan/aki",
   "dependencies": {
     "async": "*",
-    "escape-html": "^1.0.1",
+    "escape-html": "*",
     "express": "3.x",
     "socket.io": "*"
   }
